--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "es6-promise": "^4.1.1",
+    "rx": "^4.1.0",
     "socket.io": "~0.9.6",
     "mime": "~1.4.1",
     "cookie-parser": "~1.4.3",
